--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,15 @@
-# custom
-input_images
-output_images
-compare_u2
-trained_checkpoint
+input_images/*
+!input_images/0a563d036018e91cd9b5899adb50ec18.jpg
+output_images/*
+trained_checkpoint/*
+!output_images/.keep
+checkpoint_u2net.pth
+chunk_*
+conditions_*
+images_*
+captions_*
+
+
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -31,20 +38,16 @@ share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# Virtual environment
+# Virtual environments
 venv/
 ENV/
 env/
-.env/
 .venv/
 env.bak/
 venv.bak/
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
 *.manifest
 *.spec
 
@@ -85,7 +88,6 @@ instance/
 
 # Sphinx documentation
 docs/_build/
-build/
 
 # PyBuilder
 target/
@@ -101,11 +103,7 @@ ipython_config.py
 .python-version
 
 # pipenv
-# According to pypa/pipenv#598, it is recommended to include Pipfile.lock in version control.
-# However, in case of collaboration, if having platform-specific dependencies or dependencies
-# having no cross-platform support, pipenv may install dependencies that don't work, or not
-# install all needed dependencies.
-#Pipfile.lock
+Pipfile.lock
 
 # PEP 582; used by e.g. github.com/David-OConnor/pyflow
 __pypackages__/
